
CHANGELOG

for libalf, libAMoRE (local branch for libAMoRE++), libAMoRE++,
liblangen, libmVCA and finite-automata-tools.



v0.3   (FIXME SET DATE)
----------------------------
svn-revision ** FIXME **

- A lot of cleanup and bugfixes
- all libraries: try to use better style to avoid cluttering namespace and other
	library-related problems. this includes:
	- avoiding "using namespace std" in headers
	- checking/removing all warnings that occur
	- serialization framework
	- regular memory profiling, including for leaks
	- if possible, use <const_iterator>s instead of <iterator>s
	- using const keyword for functions that don't change anything
- libalf: refactor of conjectures
- libalf: New (generic) statistic type
- libalf: New algorithm Rivest&Schapire (Angluin L* variant)
- libalf: Extended algorithms to support learning of mealy-machines,
	not just finite automata:
	- angluin_simple_table
	- angluin_col_table
	- rivest_schapire_table
	- biermann_original
- libalf: Critical bug in Kearns&Vazirani algorithm fixed
- libalf: introduced an example answer-type for learning mealy-machines
	in answer.h: class fixed_count_answer.
	however, in simple cases, one can also use int or char.
- libAMoRE++: Bug fixed that made antichains fail for deterministic automata



v0.2   (2010-04-18 21:11:33)
----------------------------
OLD-SVN-revision 1310

not noted.

v0.1a  (2010-02-04 16:06:08)
----------------------------
OLD-SVN-revision 1139

not noted.

v0.1   (2009-10-13 11:03:25)
----------------------------
OLD-SVN-revision 1005

initial release
