@@ -4,7 +4,7 @@ $Id$
 Authors and contributors to the ``Finite Automata Tools (FAT)'' project
 -----------------------------------------------------------------------
 
-2008, 2009, 2010:
+2008, 2009, 2010, 2011
 
 David R. Piegdon <david-i2@piegdon.de>
 
