@@ -16,8 +16,10 @@
  * You should have received a copy of the GNU Lesser General Public License
  * along with FAT.  If not, see <http://www.gnu.org/licenses/>.
  *
- * (c) 2008,2009 Lehrstuhl Softwaremodellierung und Verifikation (I2), RWTH Aachen University
- *           and Lehrstuhl Logik und Theorie diskreter Systeme (I7), RWTH Aachen University
+ * (c) 2008,2009,2010,2011
+ *		Lehrstuhl Softwaremodellierung und Verifikation (I2), RWTH Aachen University
+ *          and Lehrstuhl Logik und Theorie diskreter Systeme (I7), RWTH Aachen University
+ *          and David R. Piegdon <david-i2@piegdon.de>
  * Author: David R. Piegdon <david-i2@piegdon.de>
  *
  */
